--- a/video.tex
+++ b/video.tex
@@ -1,1 +1,5 @@
 
+\documentclass[a4paper,11pt]{article}  
+\begin{document}  
+The video will be made by Yunxiao Hu and Yanzhao Li. And the video will discuss the language Logo, how to use this language and the feature of the language: what are differences between the language we learned like java, c, or haskell. What's more, we will also tell why Logo is good for children to learn. Logo is useful in drawing a picture or making animation, thus, the code we want to show can be a part of code which can use some for loop or recursion to draw a picture or animation. To let people can see the output of our code, we plan to record our computer scene to let people directly know how the code works.
+\end{document} 
